[gd_scene load_steps=31 format=3 uid="uid://otapcp4rebvt"]

[ext_resource type="Script" path="res://scenes/scene3.gd" id="1_2oslb"]
[ext_resource type="Texture2D" uid="uid://c2n75ywdx865y" path="res://assets/backgrounds/judgesSide.png" id="2_ta1se"]
[ext_resource type="Texture2D" uid="uid://dp66xco4vbvku" path="res://assets/sprites/sunny-sprite.png" id="3_0tjoi"]
[ext_resource type="FontFile" uid="uid://c42vn22udh74l" path="res://FOT-ModeMinBLargeStd-R.otf" id="3_ud0bp"]
[ext_resource type="Texture2D" uid="uid://bhn534hh0wssh" path="res://assets/sprites/judge-sprite.png" id="4_5gylr"]
[ext_resource type="Texture2D" uid="uid://cbgex0h8g788y" path="res://assets/ui/cornerButton_unpressed.png" id="4_a3kke"]
[ext_resource type="Texture2D" uid="uid://dmnlom6qhwr8x" path="res://assets/sprites/alexa-sprite.png" id="5_h3hxn"]
[ext_resource type="PackedScene" uid="uid://bwo7hmrw6dsbj" path="res://inventory/inventory_ui.tscn" id="5_kty86"]
[ext_resource type="Texture2D" uid="uid://b5dwq1rgckqxk" path="res://assets/backgrounds/prosecutor-bench.png" id="6_74frr"]
[ext_resource type="AudioStream" uid="uid://dx6vblsbtd8lw" path="res://audio/blip.mp3" id="9_qqqyg"]
[ext_resource type="AudioStream" uid="uid://co66kk6avp7av" path="res://audio/typewriter.mp3" id="10_2of3l"]

[sub_resource type="Animation" id="Animation_sjpap"]
resource_name = "Blinking"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.7, 0.9, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 3, 0, 3, 0, 25]
}

[sub_resource type="Animation" id="Animation_olobw"]
resource_name = "Talking"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 1, 0, 1, 0, 2]
}

[sub_resource type="Animation" id="Animation_xvly0"]
resource_name = "Suspicious_Talking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [60, 68, 60, 70, 60]
}

[sub_resource type="Animation" id="Animation_xpkiu"]
resource_name = "Suspicious_Blinking"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [60]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pgmlq"]
_data = {
"Blinking": SubResource("Animation_sjpap"),
"Suspicious_Blinking": SubResource("Animation_xpkiu"),
"Suspicious_Talking": SubResource("Animation_xvly0"),
"Talking": SubResource("Animation_olobw")
}

[sub_resource type="Animation" id="Animation_xnak8"]
resource_name = "Blinking"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 0.7001),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 9, 0]
}

[sub_resource type="Animation" id="Animation_x823a"]
resource_name = "Talking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pi1fh"]
_data = {
"Blinking": SubResource("Animation_xnak8"),
"Talking": SubResource("Animation_x823a")
}

[sub_resource type="Animation" id="Animation_xs1fr"]
resource_name = "Blinking"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_v6ukb"]
resource_name = "Talking"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [5, 6, 5]
}

[sub_resource type="Animation" id="Animation_ifljm"]
resource_name = "CryTalking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [20, 21, 20]
}

[sub_resource type="Animation" id="Animation_yum14"]
resource_name = "CryBlinking"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ykevp"]
_data = {
"Blinking": SubResource("Animation_xs1fr"),
"CryBlinking": SubResource("Animation_yum14"),
"CryTalking": SubResource("Animation_ifljm"),
"Talking": SubResource("Animation_v6ukb")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j8vrb"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_45ah0"]
texture = ExtResource("4_a3kke")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w4xpr"]
texture = ExtResource("4_a3kke")
modulate_color = Color(0.836576, 0.711346, 0.605006, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dqeo5"]
texture = ExtResource("4_a3kke")
modulate_color = Color(0.541247, 0.291974, 0.221316, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4p8y1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t6a8b"]

[node name="Node2D" type="Node2D"]

[node name="scene3" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_2oslb")

[node name="Background" type="TextureRect" parent="scene3"]
layout_mode = 0
offset_right = 1930.0
offset_bottom = 1091.0
texture = ExtResource("2_ta1se")

[node name="sunny_sprite" type="Sprite2D" parent="scene3"]
position = Vector2(1155, 528.704)
scale = Vector2(1.728, 1.66749)
texture = ExtResource("3_0tjoi")
hframes = 12
vframes = 15
frame = 60

[node name="sunny_sprite_animation" type="AnimationPlayer" parent="scene3/sunny_sprite"]
libraries = {
"": SubResource("AnimationLibrary_pgmlq")
}

[node name="judge_sprite" type="Sprite2D" parent="scene3"]
position = Vector2(978.462, 434.294)
scale = Vector2(1.35481, 1.36604)
texture = ExtResource("4_5gylr")
hframes = 10
vframes = 5

[node name="judge_sprite_animation" type="AnimationPlayer" parent="scene3/judge_sprite"]
libraries = {
"": SubResource("AnimationLibrary_pi1fh")
}

[node name="alexa_sprite" type="Sprite2D" parent="scene3"]
position = Vector2(954.015, 462.195)
scale = Vector2(1.58433, 1.52885)
texture = ExtResource("5_h3hxn")
hframes = 5
vframes = 5
frame = 20

[node name="alexa_sprite_animation" type="AnimationPlayer" parent="scene3/alexa_sprite"]
libraries = {
"": SubResource("AnimationLibrary_ykevp")
}

[node name="stand" type="TextureRect" parent="scene3"]
layout_mode = 0
offset_right = 1930.0
offset_bottom = 1091.0
texture = ExtResource("6_74frr")

[node name="DialogueBoxButton" type="Button" parent="scene3"]
layout_mode = 0
offset_left = -1932.0
offset_top = 803.0
offset_right = -1924.0
offset_bottom = 811.0
scale = Vector2(1567.73, 159.941)
theme_override_styles/focus = SubResource("StyleBoxEmpty_j8vrb")

[node name="DialogueBox" type="Polygon2D" parent="scene3"]
position = Vector2(-9, 0)
scale = Vector2(1.02753, 0.99655)
color = Color(0.168627, 0.168627, 0.168627, 0.470588)
polygon = PackedVector2Array(3, 803, 1951, 803, 1951, 1123, 3, 1123)

[node name="PersonNameBox" type="Polygon2D" parent="scene3"]
position = Vector2(145, 763)
scale = Vector2(0.807388, 0.375424)
color = Color(0.48825, 0.315, 0.7, 0.917647)
polygon = PackedVector2Array(-0.199969, 1.66217, 1.67047, -2.6637, 310.698, -2.6637, 365.822, 98.5553, 306.562, 188.651, 152.066, 188.651, -0.973211, 188.651, -60.1351, 90.5643)

[node name="DialogueText" type="Label" parent="scene3"]
layout_mode = 0
offset_left = 219.0
offset_top = 858.0
offset_right = 667.0
offset_bottom = 924.0
scale = Vector2(3.32776, 3.02778)
theme_override_fonts/font = ExtResource("3_ud0bp")
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="PersonNameText" type="Label" parent="scene3"]
layout_mode = 0
offset_left = 160.0
offset_top = 780.0
offset_right = 254.0
offset_bottom = 801.0
scale = Vector2(2.31653, 2.09949)
theme_override_fonts/font = ExtResource("3_ud0bp")
metadata/_edit_use_anchors_ = true

[node name="CourtRecordButton" type="Button" parent="scene3"]
layout_mode = 0
offset_left = 1478.0
offset_top = -16.0
offset_right = 1597.0
offset_bottom = 9.0
scale = Vector2(3.82134, 4.93538)
theme_override_fonts/font = ExtResource("3_ud0bp")
theme_override_styles/normal = SubResource("StyleBoxTexture_45ah0")
theme_override_styles/hover = SubResource("StyleBoxTexture_w4xpr")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dqeo5")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4p8y1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_t6a8b")

[node name="CourtRecordText" type="Label" parent="scene3/CourtRecordButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.097823
anchor_top = -0.0529059
anchor_right = 0.0978255
anchor_bottom = -0.0529059
offset_left = 15.8363
offset_top = 9.22477
offset_right = 126.836
offset_bottom = 30.2248
scale = Vector2(0.689314, 0.523945)
theme_override_fonts/font = ExtResource("3_ud0bp")
text = "Court Record"
metadata/_edit_use_anchors_ = true

[node name="Inventory_UI" parent="scene3" instance=ExtResource("5_kty86")]
visible = false
script = null

[node name="blip" type="AudioStreamPlayer2D" parent="scene3"]
stream = ExtResource("9_qqqyg")
volume_db = 6.559

[node name="typewrite" type="AudioStreamPlayer2D" parent="scene3"]
stream = ExtResource("10_2of3l")
volume_db = 5.943
